# Calculadora-em-C

./: CMakeLists.txt  main.c
Calculadora/: Calculadora.h  Menu.c  cosseno.c  divisao.c  fatorial.c  media.c  multiplicacao.c  primo.c  soma.c  subtracao.c
